# avif-image-processing

./: Cargo.toml
image-cdn/: package-lock.json  package.json  wrangler.jsonc
image-cdn/src/: index.js
src/: api.html  handlers.rs  main.rs  routes.rs  utils.rs
