[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-multipart = "0.7.2"
actix-web = "4.11.0"
anyhow = "1.0.99"
aws-config = "1.8.5"
aws-sdk-s3 = "1.103.0"
bytes = "1.10.1"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures-util = "0.3.31"
mime = "0.3.17"
rand = "0.9.2"
rustls = "0.23.31"
serde = "1.0.219"
serde_json = "1.0.143"
serde_qs = "0.15.0"
tempfile = "3.21.0"
tokio = "1.47.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.18.0"
